Moved binaries to src/main/resources

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,9 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+### VS CODE ###
+.vscode
+
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
